--- a/style.css
+++ b/style.css
@@ -71,40 +71,60 @@ body {
     height: auto;
 }
 
-.characterCardNav {
-    background-image: url("HandDrawnIcons/Realistic/variants/Document1_2.png");
+#button-age-order {
+    margin: .5rem;
+    padding: 1rem;
+    background-color: black;
+    width: 0;
+    height: 0;
+    position: absolute;
+    border-radius: 50%;
+    border: 1px solid;
+    border-color: #136131;
+    transition: all .2s ease-in-out;
+    background-image: url("img/HandDrawnIcons/Realistic/stuff/Gravestone3.png");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    background-size: 170%;
+}
+
+#button-age-order:hover {
+    margin: .6rem;
+    padding: .9rem;
+}
+
+.navItem {
+    width: 100%;
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
     backface-visibility: 90%;
     transform: scale(1);
     z-index: 2;
     transition: all .2s ease-in-out;
+    filter: sepia(50%) brightness(80%) saturate(200) hue-rotate(60deg) drop-shadow(0 0 0.75rem rgb(112, 248, 107));
+}
+
+.characterCardNav {
+    background-image: url("img/HandDrawnIcons/Realistic/variants/Document1_2.png");
+    background-size: 150%;
 }
 
 .itemsCardNav {
-    background-image: url("HandDrawnIcons/Realistic/stuff/Axe1.png");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+    background-image: url("img/HandDrawnIcons/Realistic/stuff/Axe1.png");
     background-size: 100%;
-    backface-visibility: 90%;
-    transform: scale(1);
-    z-index: 2;
+}
+
+.cardNav {
     transition: all .2s ease-in-out;
+    z-index: 2;
 }
 
-.itemsCardNav:hover {
+.cardNav:hover {
     cursor:pointer;
     transform: scale(.9);
-    background-size: 80%;
-}
-
-.characterCardNav:hover {
-    cursor:pointer;
-    transform: scale(.9);
-    background-size: 150%;
+    background-size: calc(background-size, -20%);
 }
 
 .page-container {
@@ -154,6 +174,7 @@ body {
 
 .screen:hover {
     transform: scale(.95);
+    cursor:pointer;
 }
 
 .screen-text {
@@ -326,6 +347,7 @@ div.clickEffect{
     border-radius:50%;
     animation:clickEffect 0.4s ease-out;
     z-index:99999;
+    pointer-events: none;
 }
 
 @keyframes clickEffect{
