--- a/style.css
+++ b/style.css
@@ -71,24 +71,32 @@ body {
     height: auto;
 }
 
-#button-age-order {
+.character-buttons-container {
+    position: absolute;
+}
+
+.character-buttons {
     margin: .5rem;
     padding: 1rem;
     background-color: black;
-    width: 0;
-    height: 0;
-    position: absolute;
     border-radius: 50%;
     border: 1px solid;
     border-color: #136131;
     transition: all .2s ease-in-out;
-    background-image: url("img/HandDrawnIcons/Realistic/stuff/Gravestone3.png");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
 }
 
-#button-age-order:hover {
+#button-age-order {
+    background-image: url("img/HandDrawnIcons/Realistic/stuff/Gravestone3.png");
+}
+
+#button-name-order {
+    background-image: url("img/HandDrawnIcons/Realistic/elements/DottedLine1.png");
+}
+
+.character-buttons:hover {
     margin: .6rem;
     padding: .9rem;
 }
