--- a/style.css
+++ b/style.css
@@ -9,66 +9,7 @@
 
 * {
     font-family: "Space Mono", monospace;
-}
-
-table {
-    border-collapse: collapse;
-    width: 100%;
-}
-
-td {
-    padding-left: .25rem;
-}
-
-tr:first-child {
-    border-top:2px dashed #136131;
-}
-
-tr {
-    border-bottom:2px dashed #136131;
-}
-
-@keyframes background-pan {
-    from {
-      background-position: 0% center;
-    }
-    
-    to {
-      background-position: -200% center;
-    }
-  }
-
-body {   
-    min-height: 100vh;
-    display: grid;
-    align-items: center;
-    background-size: 200% !important;
-    overflow-x: hidden;
-    margin: 0;
-    animation: background-pan 5s linear infinite;
-    background: linear-gradient(
-        to right,
-        var(--g2),
-        var(--g1),
-        var(--g2)
-    );
-}
-
-.underlay {
-    min-height: calc(100vh - 1px);
-    width: calc(100vw - 1px);
-    display: grid;
-    grid-template-columns: repeat(var(--columns), 1fr);
-    grid-template-rows: repeat(var(--rows), 1fr);
-    position: absolute;
-    top: 0;
-    left: 0;
-}
-
-.tile {
-    background-color: rgb(15, 15, 15);
-    position: relative;
-    margin: 0.8px;
+    color: white;
 }
 
 .banner {
@@ -81,80 +22,17 @@ body {
 }
 
 .card-banner {
-    color: white;
-    font-size: 7.25rem;
+    font-size: 4vw;
     font-weight: 600;
 }
 
 .character-banner-container {
     z-index: 1;
-    width: auto;
+    width: 65vw;
+    min-width: 250px;
     height: auto;
 }
 
-.character-buttons-container {
-    position: absolute;
-}
-
-.character-buttons {
-    margin: .5rem;
-    padding: 1rem;
-    background-color: black;
-    border-radius: 50%;
-    border: 1px solid;
-    border-color: #136131;
-    transition: all .2s ease-in-out;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-#button-age-order {
-    background-image: url("img/HandDrawnIcons/Realistic/stuff/Gravestone3.png");
-}
-
-#button-name-order {
-    background-image: url("img/HandDrawnIcons/Realistic/elements/DottedLine1.png");
-}
-
-.character-buttons:hover {
-    margin: .6rem;
-    padding: .9rem;
-}
-
-.navItem {
-    width: 100%;
-    height: 100%;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    backface-visibility: 90%;
-    transform: scale(1);
-    z-index: 2;
-    transition: all .2s ease-in-out;
-    filter: sepia(50%) brightness(80%) saturate(200) hue-rotate(60deg) drop-shadow(0 0 0.75rem rgb(112, 248, 107));
-}
-
-.characterCardNav {
-    background-image: url("img/HandDrawnIcons/Realistic/variants/Document1_2.png");
-    background-size: 150%;
-}
-
-.itemsCardNav {
-    background-image: url("img/HandDrawnIcons/Realistic/stuff/Axe1.png");
-    background-size: 100%;
-}
-
-.cardNav {
-    transition: all .2s ease-in-out;
-    z-index: 2;
-}
-
-.cardNav:hover {
-    cursor:pointer;
-    transform: scale(.9);
-    background-size: calc(background-size, -20%);
-}
 
 .page-container {
     z-index: 1;
@@ -162,27 +40,20 @@ body {
     justify-content: center;
 }
 
-.nav {
-    height: 2rem;
-    padding: 1rem;
-}
 
 .screens {
-    padding: 2rem;
+    padding: 1vw;
     background-color: rgb(var(--background-rgb)  / 95%);
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(180px, auto));
     column-gap: 20px;
     row-gap: 15px;
-    grid-template-areas: "header info info info";
 }
 
 .screen {
-    justify-self: center;
     position: relative;
     z-index: 10;
     overflow: hidden;
-    width: 300px;
     border: 3px solid rgb(var(--primary-rgb) / 80%);
     aspect-ratio: 10 / 16;
     border-radius: 1rem;
@@ -190,16 +61,6 @@ body {
     transition: all .2s ease-in-out;
 }
 
-#infoBar {
-    grid-area: info;
-    display: none;
-    color: white;
-    font-size: 3.25rem;
-}
-
-#activeSpot {
-    grid-area: header;
-}
 
 .screen:hover {
     transform: scale(.95);
@@ -218,7 +79,6 @@ body {
 
 .screen-text .name {
     font-weight: 400;
-    color: white;
     transition: all .2s ease-in-out;
 }
 
@@ -315,81 +175,5 @@ body {
         background-position: 0% 0%;
         background-size: 170%;
         filter: sepia(10%) hue-rotate(360deg);
-    }
-}
-
-@media only screen and (max-width: 1500px)  {
-    .screens {
-        grid-template-columns: repeat(3, 1fr);
-        grid-template-areas: "header info info";
-    }
-}
-
-@media only screen and (max-width: 1180px)  {
-    .screens {
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-areas: "header info";
-    }
-
-    .card-banner {
-        font-size: 6.25rem;
-        font-weight: 600;
-    }
-}
-
-@media only screen and (max-width: 1000px)  {
-    .card-banner {
-        font-size: 5.00rem;
-        font-weight: 600;
-    }
-}
-
-@media only screen and (max-width: 860px)  {
-    .screens {
-        display: block;
-    }
-
-    .screen {
-        margin-bottom: 20px;
-        margin: 0px auto 1rem auto;
-    }
-}
-
-@media only screen and (max-width: 760px)  {
-    .card-banner {
-        font-size: 2.25rem;
-        font-weight: 600;
-    }
-}
-
-@media only screen and (max-width: 600px)  {
-    .nav {
-        padding: .2rem;
-    }
-}
-
-div.clickEffect{
-    position:fixed;
-    box-sizing:border-box;
-    border-style:solid;
-    border-color:#136131;
-    border-radius:50%;
-    animation:clickEffect 0.4s ease-out;
-    z-index:99999;
-    pointer-events: none;
-}
-
-@keyframes clickEffect{
-    0% {
-        opacity:1;
-        width:0.5em; height:0.5em;
-        margin:-0.25em;
-        border-width:0.5em;
-    }
-    100% {
-        opacity:0.2;
-        width:15em; height:15em;
-        margin:-7.5em;
-        border-width:0.03em;
     }
 }
