--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@
 
 
 .page-container {
+    padding-top: 5vh;
     z-index: 1;
     display: flex;
     justify-content: center;
@@ -45,9 +46,15 @@
     padding: 1vw;
     background-color: rgb(var(--background-rgb)  / 95%);
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(180px, auto));
+    grid-template-columns: repeat(auto-fill, minmax(240px, auto));
     column-gap: 20px;
     row-gap: 15px;
+}
+
+@media only screen and (max-width: 480px)  {
+    .screens {
+        grid-template-columns: repeat(auto-fit, minmax(180px, auto))!important;
+    }
 }
 
 .screen {
